test/compile_errors/err_specified_enum_missing_value.w
//! expect-error: @[specified] requires explicit discriminant value

@[specified]
enum MessageType: u16:
    Ping = 1
    Pong

fn main:
    let _ = MessageType.Pong
